packages/web/src/components/spa/HackAUBG/ScheduleSection/schedule_section.css
.schedule-section-container {
    width: 100%;
    display: flex;
    flex-direction: column;
    font-weight: 400;
    background-color: #fff;
    align-items: center;
    font-family: 'Roboto';
}

.schedule-section-title {
    padding-top: 7%;
    color: #19b700;
    font-weight: 900;
    font-size: 2em;
    margin-left: 3%;
}

.schedule-text-container {
    width: 75%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    padding-top: 1vh;
    margin-left: 5%;
}

.schedule-table-container {
    padding-bottom: 7%;
    margin-right: 3%;
    width: 320px;
    display: flex;
    flex-direction: column;
    font-weight: 400;
}

.schedule-table-title {
    padding: 5% 0% 10% 0%;
    color: #19b700;
    font-weight: 900;
    font-size: 1.4em;
    text-align: center;
}

.schedule-table-row {
    display: flex;
    flex-direction: row;
}

.schedule-time {
    color: #19b700;
    font-weight: 900;
    font-size: 1.3em;
    padding-right: 30px;
}

.schedule-section-container p {
    font-size: 1.2em;
}

@media only screen and (max-width: 1450px) {
    .schedule-text-container {
        width: 80%;
        margin-left: 3%;
    }
}

@media only screen and (max-width: 1050px) {
    .schedule-text-container {
        width: 80%;
    }
}
@media only screen and (max-width: 900px) {
    .schedule-text-container {
        flex-direction: column;
        align-items: center;
        width: auto;
        padding: 0%;
    }
    .schedule-section-container {
        align-items: normal;
        padding-top: 5%;
    }
    .schedule-section-title {
        text-align: center;
    }
    .schedule-table-title {
        padding: 5% 0% 5% 0%;
    }
}

@media only screen and (max-width: 300px) {
    .schedule-text-container {
        margin-left: 5%;
        margin-right: 5%;
        width: 120px;
    }
    .schedule-table-container {
        font-size: 0.9rem;
    }
}

@media only screen and (max-width: 400px) {
    .schedule-text-container {
        margin-left: 7%;
    }
    .schedule-table-container {
        width: 200px;
    }
}

